<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_profile_v"
            android:iconTint="@color/white"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_cars"
            android:icon="@drawable/ic_my_cars_v"
            android:iconTint="@color/white"
            android:title="@string/menu_my_cars" />
        <item
            android:id="@+id/nav_cars_shop"
            android:icon="@drawable/ic_buy_car_v"
            android:iconTint="@color/white"
            android:title="@string/menu_cars_shop" />
    </group>
</menu>